k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-ms-deployment
  labels:
    app: hello-ms-dpl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-ms
  template:
    metadata:
      labels:
        app: hello-ms
    spec:
      containers:
      - name: hello-ms
        image: facundor/hello-ms:1.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
