k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-ms-service
spec:
  selector:
    app: hello-ms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
